# kekkai

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  .pre-commit-hooks.yaml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  RELEASE_NOTES.md  RELEASE_NOTES_v1.1.1.md  SECURITY.md  pyproject.toml
.circleci/: config.yml
.github/: CODEOWNERS  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md  scanner_issue.md
.github/workflows/: docker-publish.yml  docker-security-scan.yml  kekkai-pr-scan.yml  release-slsa.yml  test-cross-platform.yml  trigger-distributions.yml
apps/kekkai/: Dockerfile
apps/portal/: Dockerfile  docker-compose.yml  nginx.conf  server.py
apps/regulon/: server.py
apps/vscode-kekkai/: .eslintrc.json  .vscodeignore  README.md  package-lock.json  package.json  tsconfig.json
docs/: README.md  api.md  ci-integration.md  ci-mode.md  cli-reference.md  configuration.md  troubleshooting.md  vscode-extension.md
docs/api/: api.md
docs/ci/: automated-distributions.md  chocolatey-integration.md  ci-integration.md  ci-mode.md  cli-reference.md  docker-security.md  docker-usage.md  docker-verification.md  homebrew-maintenance.md  scoop-integration.md
docs/compliance/: README.md
docs/config/: configuration.md
docs/development/: ci-cd.md  testing.md  vscode-extension.md
docs/dojo/: dojo-quickstart.md  dojo-security.md  dojo-troubleshooting.md  dojo.md
docs/installation/: windows.md
docs/ops/: README.md  backup-restore.md  doctor-command-spec.md  incident-response.md  monitoring.md  upgrade-runbook.md
docs/portal/: README.md  cli-sync.md  deployment.md  multi-tenant.md  rbac.md  saml-setup.md
docs/security/: slsa-provenance.md
docs/threatflow/: README.md
docs/triage/: README.md  fix-engine.md
docs/troubleshooting/: troubleshooting.md
requirements/: dev.in  dev.txt
sample_challenge/my-insecure-app/: app.py  (+1 more)
scripts/: backup.sh  kekkai-docker  release.sh  restore.sh  setup-dev-target.sh
tests/: test_cli_output.py  test_dojo_import.py  test_editor_support.py  test_enterprise_licensing.py  test_fix_engine.py  test_kekkai_cli.py  test_kekkai_dojo.py  test_kekkai_dojo_cli.py  test_kekkai_runner.py  test_ops_log_shipper.py  test_portal_uploads.py  test_portal_web.py  test_regulon_fetch.py  test_regulon_rate_limit.py  test_regulon_service_web.py  test_regulon_storage_pdf.py  test_regulon_urls.py  test_regulon_urls_internal.py  test_report.py  test_scanner_backends.py  test_scanner_base.py  test_scanner_container.py  test_scanner_falco.py  test_scanner_gitleaks.py  test_scanner_native.py  test_scanner_semgrep.py  test_scanner_zap.py  test_threatflow_sanitizer.py  test_triage_code_context.py  test_triage_editor.py  test_triage_ignore.py  test_triage_loader.py  test_triage_security.py  test_unified_report.py
(+185 files in other folders)
